hermes/tests/fixtures/verification_failures/expected.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::doc_block

  × Documentation block error: Unclosed Hermes block in documentation.
   ╭─[[PROJECT_ROOT]/src/broken_doc_block/mod.rs:1:1]
 1 │ /// ```lean, hermes
   · ─────────┬─────────
   ·          ╰── problematic block
 2 │ /// context:
   ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Multiple unnamed bounds are not allowed. If you
  │ have multiple bounds, they must all be named (e.g., `requires
  │ (my_name):`).
    ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:9:1]
  8 │ ///   ///   ///   x > 0
  9 │ /// requires:
    · ──────┬──────
    ·       ╰── problematic block
 10 │ ///   ///   ///   y > 0
    ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Multiple unnamed bounds are not allowed. If you
  │ have multiple bounds, they must all be named (e.g., `requires
  │ (my_name):`).
    ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:20:1]
 19 │ ///   ///   ///   ret == x
 20 │ /// ensures:
    · ──────┬─────
    ·       ╰── problematic block
 21 │ ///   ///   ///   ret == y
    ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Bound name `h_same` conflicts with an existing
  │ requires bound.
    ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:32:1]
 31 │ ///   ///   ///   x > 0
 32 │ /// ensures (h_same):
    · ──────────┬──────────
    ·           ╰── problematic block
 33 │ ///   ///   ///   ret == x
    ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: `proof context` sections cannot be named.
    ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:75:1]
 74 │ /// ```lean, hermes, spec
 75 │ /// proof context (foo):
    · ────────────┬───────────
    ·             ╰── problematic block
 76 │ ///   have h: 1 = 1 := by simp
    ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Invalid bound name `123invalid`. Names must be
  │ valid identifiers (alphanumeric and underscores, starting with a letter or
  │ underscore).
    ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:88:1]
 87 │ /// ```lean, hermes, spec
 88 │ /// requires (123invalid):
    · ─────────────┬────────────
    ·              ╰── problematic block
 89 │ ///   ///   ///   x > 0
    ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Invalid bound name ``. Names must be valid
  │ identifiers (alphanumeric and underscores, starting with a letter or
  │ underscore).
     ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:100:1]
  99 │ /// ```lean, hermes, spec
 100 │ /// requires ():
     · ────────┬───────
     ·         ╰── problematic block
 101 │ ///   x > 0
     ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Invalid bound name `if`. Names cannot be Lean
  │ keywords.
     ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:126:1]
 125 │ /// ```lean, hermes, spec
 126 │ /// requires (if):
     · ─────────┬────────
     ·          ╰── problematic block
 127 │ ///   ///   ///   x > 0
     ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Invalid bound name `then`. Names cannot be Lean
  │ keywords.
     ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:136:1]
 135 │ /// ```lean, hermes, spec
 136 │ /// ensures (then):
     · ─────────┬─────────
     ·          ╰── problematic block
 137 │ ///   ///   ///   ret = x
     ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Duplicate bound name `e1`.
     ╭─[[PROJECT_ROOT]/src/named_bounds_failures/mod.rs:150:1]
 149 │ ///   simp_all
 150 │ /// proof (e1):
     · ───────┬───────
     ·        ╰── problematic block
 151 │ ///   simp_all
     ╰────

Error: Aborting due to 10 previous errors.
